[package]
name = "realm-of-exile"
version = "0.1.0"
authors = ["Hans Pistor <hpistor@stetson.edu"]
edition = "2018"

[dependencies]
log = { version = "0.4.8", features = ["serde"] }

[dependencies.amethyst]
version = "0.13.2"
features = ["nightly"]

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
